--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body
 
 .box
 {
-    height: 300px;
-    width: 600px;
+    height: 350px;
+    width: 630px;
     border: 2px;
     background-color: white;
     border-radius: 3px;
@@ -40,21 +40,22 @@ h3
     position: relative;
     top: 100px;
     left: 240px;
-    background-color: rgb(230, 176, 14);
+    background:linear-gradient(230deg,rgb(165, 80, 245),rgb(155, 78, 233));
     border: none;
-    border-radius: 5px;
-    color: white;
-    padding:12px;
+    border-radius: 23px;
+    color: rgb(198, 196, 196);
+    padding:8px;
     font-size: 1rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
     
 }
 
 .jokeBtn:hover 
 {
     cursor: pointer;
-    background-color: rgb(214, 208, 17);
-    color: black;
+    background:linear-gradient(230deg,rgb(143, 62, 224),rgb(141, 23, 209));
     
 }
 
